--- a/lists.html
+++ b/lists.html
@@ -13,6 +13,8 @@
     <li>machine gun</li>
     <li>gobstoppers</li>
     <li>liber-tea</li>
+    <li>coffee</li>
+    <li>cold</li>
     
 </ul>
     
